--- a/hairista/Controller/Manager/Images/ImagesViewController.xib
+++ b/hairista/Controller/Manager/Images/ImagesViewController.xib
@@ -103,7 +103,7 @@
                         <constraint firstAttribute="trailing" secondItem="bHR-hc-dNA" secondAttribute="trailing" id="o2O-83-pfA"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FiW-Lx-RNz">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FiW-Lx-RNz" customClass="BVReorderTableView">
                     <rect key="frame" x="0.0" y="72" width="375" height="595"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
@@ -111,9 +111,21 @@
                         <outlet property="delegate" destination="-1" id="0Mw-6d-5Qx"/>
                     </connections>
                 </tableView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LFp-ph-AeP">
+                    <rect key="frame" x="313" y="600" width="46" height="51"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="46" id="8h1-Qq-0Mv"/>
+                        <constraint firstAttribute="height" constant="51" id="Fo6-yC-fIh"/>
+                    </constraints>
+                    <state key="normal" image="ic_pin_fill"/>
+                    <connections>
+                        <action selector="touchBtnPin:" destination="-1" eventType="touchUpInside" id="Jhw-OJ-5lH"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="LFp-ph-AeP" secondAttribute="trailing" constant="16" id="13A-hc-SBt"/>
                 <constraint firstItem="8hh-tn-wS9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="DJl-Uv-SN1"/>
                 <constraint firstItem="FiW-Lx-RNz" firstAttribute="top" secondItem="8hh-tn-wS9" secondAttribute="bottom" id="JyU-hl-Bbw"/>
                 <constraint firstItem="FiW-Lx-RNz" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Y94-Uv-LyZ"/>
@@ -121,12 +133,14 @@
                 <constraint firstItem="8hh-tn-wS9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="hpr-XF-uWH"/>
                 <constraint firstAttribute="trailing" secondItem="8hh-tn-wS9" secondAttribute="trailing" id="jBa-qa-QG7"/>
                 <constraint firstAttribute="trailing" secondItem="FiW-Lx-RNz" secondAttribute="trailing" id="t2i-pt-w3q"/>
+                <constraint firstAttribute="bottom" secondItem="LFp-ph-AeP" secondAttribute="bottom" constant="16" id="wH6-AH-jZ1"/>
             </constraints>
             <point key="canvasLocation" x="40.5" y="59.5"/>
         </view>
     </objects>
     <resources>
         <image name="ic_menu" width="21" height="18"/>
+        <image name="ic_pin_fill" width="40" height="40"/>
         <image name="ic_upload" width="40" height="40"/>
     </resources>
 </document>
