--- a/hairista/Controller/Manager/Images/ImgIndexCell/ImgIndexCell.xib
+++ b/hairista/Controller/Manager/Images/ImgIndexCell/ImgIndexCell.xib
@@ -30,28 +30,67 @@
                             <constraint firstAttribute="width" secondItem="6G4-7Z-NCk" secondAttribute="height" multiplier="1:1" id="mQa-Tr-51y"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hình của Đông" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VmF-5m-sMd">
-                        <rect key="frame" x="97" y="8" width="134" height="32"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oTZ-6j-uxq">
+                        <rect key="frame" x="268" y="22" width="44" height="44"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ocl-Bq-Ood">
+                                <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
+                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="22"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.76360524460000001" blue="0.45382189880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="32" id="2lu-0s-0yK"/>
+                            <constraint firstItem="ocl-Bq-Ood" firstAttribute="top" secondItem="oTZ-6j-uxq" secondAttribute="top" id="6fd-SK-l3N"/>
+                            <constraint firstAttribute="width" constant="44" id="I8A-FA-Z0l"/>
+                            <constraint firstAttribute="trailing" secondItem="ocl-Bq-Ood" secondAttribute="trailing" id="Mfc-aO-FwB"/>
+                            <constraint firstAttribute="bottom" secondItem="ocl-Bq-Ood" secondAttribute="bottom" id="bo7-FN-D7u"/>
+                            <constraint firstAttribute="height" constant="44" id="knK-fK-XQK"/>
+                            <constraint firstItem="ocl-Bq-Ood" firstAttribute="leading" secondItem="oTZ-6j-uxq" secondAttribute="leading" id="tFo-3k-vD7"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="22"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hình của Đông" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VmF-5m-sMd">
+                        <rect key="frame" x="89" y="8" width="163" height="74"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="74" id="MeL-0s-PTw"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cee-om-4QV">
+                        <rect key="frame" x="16" y="89" width="304" height="0.5"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="0.5" id="der-yM-HGb"/>
+                        </constraints>
+                    </view>
                 </subviews>
+                <color key="backgroundColor" red="1" green="0.94901960784313721" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="VmF-5m-sMd" firstAttribute="leading" secondItem="6G4-7Z-NCk" secondAttribute="trailing" constant="15.5" id="5TJ-tt-XYq"/>
+                    <constraint firstItem="VmF-5m-sMd" firstAttribute="leading" secondItem="6G4-7Z-NCk" secondAttribute="trailing" constant="7.5" id="5TJ-tt-XYq"/>
+                    <constraint firstItem="oTZ-6j-uxq" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="62W-CJ-TTp"/>
+                    <constraint firstAttribute="trailing" secondItem="Cee-om-4QV" secondAttribute="trailing" id="9v2-ra-wos"/>
+                    <constraint firstItem="Cee-om-4QV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="CSc-MV-ucv"/>
                     <constraint firstItem="VmF-5m-sMd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="H9E-lT-SSc"/>
-                    <constraint firstItem="VmF-5m-sMd" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="-81" id="N5f-k2-KlX"/>
+                    <constraint firstItem="VmF-5m-sMd" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="-60" id="N5f-k2-KlX"/>
                     <constraint firstAttribute="bottom" secondItem="6G4-7Z-NCk" secondAttribute="bottom" constant="8" id="XgG-ra-Qt7"/>
                     <constraint firstItem="6G4-7Z-NCk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="bFU-aX-ciJ"/>
+                    <constraint firstItem="oTZ-6j-uxq" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="ca7-PX-aau"/>
+                    <constraint firstAttribute="bottom" secondItem="Cee-om-4QV" secondAttribute="bottom" id="is2-w6-WaA"/>
                     <constraint firstItem="6G4-7Z-NCk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="iyS-RK-kBR"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="imgView" destination="6G4-7Z-NCk" id="xxX-v6-Jux"/>
                 <outlet property="lblImageName" destination="VmF-5m-sMd" id="yAx-dg-vt6"/>
+                <outlet property="lblIndex" destination="ocl-Bq-Ood" id="f1r-Yh-I5G"/>
+                <outlet property="viewIndex" destination="oTZ-6j-uxq" id="HKS-vd-oRD"/>
             </connections>
             <point key="canvasLocation" x="124" y="-90"/>
         </tableViewCell>
